# musical-spectrum

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  msa  musical-spectrum.rb  spectrum.rb  spectrum_analyzer  spectrum_test
Formula/: spectrum.rb
include/: audio_processor.hpp  note_utils.hpp  spectrogram.hpp  stb_image_write.h  version.hpp  version.hpp.in
src/: audio_processor.cpp  main.cpp  note_utils.cpp  spectrogram.cpp
tests/: test_main.cpp
